--- a/server/viewer.html
+++ b/server/viewer.html
@@ -36,10 +36,10 @@ See https://github.com/adobe-type-tools/cmap-resources
 <!-- This snippet is used in production (included from viewer.html) -->
 <link rel="resource" type="application/l10n" href="pdfjs/web/locale/locale.properties">
 <script src="pdfjs/build/pdf.js"></script>
-
-
-    <script src="viewer.js"></script>
     <script src="jquery-3.2.1.min.js"></script>
+    <script src="core/data.js"></script>
+    <script src="viewer.js"></script>
+
   </head>
 
   <body tabindex="1" class="loadingInProgress">
