--- a/server/index.html
+++ b/server/index.html
@@ -47,6 +47,11 @@ h1{
         <th>文件大小</th>
         <th>上次预览页数</th>
         <th>操作</th>
+          <th>
+              <a href="upload.html">
+                  <button type="button" class="btn btn-primary">上传文件</button>
+              </a>
+          </th>
       </tr>
     </thead>
     <tbody id="box">
